--- a/index.html
+++ b/index.html
@@ -3,18 +3,82 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>SAP Page</title>
+  <title>My Simple UI</title>
+
+  <!-- Bootstrap CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
-    .card { border: 1px solid #ddd; border-radius: 10px; padding: 16px; max-width: 800px; }
-    a { word-break: break-all; }
+    body { background: #f6f7fb; }
+    .card-hover { transition: transform .15s ease, box-shadow .15s ease; }
+    .card-hover:hover { transform: translateY(-2px); box-shadow: 0 10px 22px rgba(0,0,0,.08); }
+    .badge-soft { background: rgba(13,110,253,.1); color: #0d6efd; }
   </style>
 </head>
+
 <body>
-  <div class="card">
-    <h2>SAP</h2>
-    <p>This is my first GitHub Pages screen.</p>
-    <p><b>Next:</b> put your HTML content here (links, tables, embedded dashboards, etc.).</p>
+  <div class="container py-4">
+    <div class="d-flex flex-wrap align-items-center justify-content-between gap-2 mb-3">
+      <div>
+        <h4 class="mb-0">Quick Panel</h4>
+        <small class="text-muted">Simple UI hosted on GitHub Pages</small>
+      </div>
+
+      <div class="d-flex gap-2">
+        <input id="search" class="form-control" style="min-width:260px" placeholder="Search..." />
+        <button class="btn btn-outline-secondary" id="clearBtn">Clear</button>
+      </div>
+    </div>
+
+    <div class="row g-3" id="cards"></div>
+
+    <hr class="my-4">
+    <small class="text-muted">Tip: edit the items array in the script to change cards.</small>
   </div>
+
+  <script>
+    const items = [
+      { title: "SAP", desc: "Open SAP portal in new tab", tag: "Link", url: "https://intalio.com" },
+      { title: "Reports", desc: "Monthly reports dashboard", tag: "Dashboard", url: "https://intalio.com" },
+      { title: "User Guide", desc: "Documentation and how-to", tag: "Docs", url: "https://intalio.com" },
+      { title: "Support", desc: "Contact / tickets", tag: "Help", url: "https://intalio.com" },
+    ];
+
+    const cardsEl = document.getElementById("cards");
+    const searchEl = document.getElementById("search");
+    const clearBtn = document.getElementById("clearBtn");
+
+    function render(list) {
+      cardsEl.innerHTML = list.map(x => `
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card card-hover h-100 border-0">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-start gap-2">
+                <h5 class="card-title mb-1">${x.title}</h5>
+                <span class="badge badge-soft">${x.tag}</span>
+              </div>
+              <p class="text-muted mb-3">${x.desc}</p>
+              <a class="btn btn-primary w-100" href="${x.url}" target="_blank" rel="noopener">Open</a>
+            </div>
+          </div>
+        </div>
+      `).join("");
+    }
+
+    function applySearch() {
+      const q = (searchEl.value || "").toLowerCase().trim();
+      const filtered = items.filter(x =>
+        x.title.toLowerCase().includes(q) ||
+        x.desc.toLowerCase().includes(q) ||
+        x.tag.toLowerCase().includes(q)
+      );
+      render(filtered);
+    }
+
+    searchEl.addEventListener("input", applySearch);
+    clearBtn.addEventListener("click", () => { searchEl.value = ""; render(items); });
+
+    render(items);
+  </script>
 </body>
 </html>
